--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="header">
-		<a href="#">Входные двери</a>
+		<a href="#">Выходные  двери</a>
 		<a href="#">Межкомнатные двери</a>
 		<a href="#">Балконные двери</a>
 		<a href="#">Отзывы</a>
