--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="header">
-		<a href="#">Выходные  двери</a>
+		<a href="#">Выходне  двери</a>
 		<a href="#">Межкомнатные двери</a>
 		<a href="#">Балконные двери</a>
 		<a href="#">Отзывы</a>
@@ -30,7 +30,7 @@
 			<img src="img/1.jpg" alt="Второй слайд">
 			<div class="slideText">Стильно, Быстро,
 			Надежно</div>
-			<div class="slideText_one">Более 15 лет на рынке</div>
+			<div class="slideText_one">Более 10 лет на рынке</div>
 		</div>
 		<div class="slider-dots">
 			<span class="slider-dots_item" onclick="currentSlide(1)"></span> 
