--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<img src="img/1.jpg" alt="Второй слайд">
 			<div class="slideText">Стильно, Быстро,
 			Надежно</div>
-			<div class="slideText_one">Боле 0 let na rinkeрынке</div>
+			<div class="slideText_one">Более 0 меньше 2</div>
 		</div>
 		<div class="slider-dots">
 			<span class="slider-dots_item" onclick="currentSlide(1)"></span> 
